@@ -32,7 +32,6 @@ import java.lang.reflect.Method;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
 
 import org.apache.commons.lang3.StringUtils;
@@ -359,7 +358,7 @@ public class FusekiConfig {
 
     /** Read service descriptions in the given directory */
     public static List<DataAccessPoint> readConfigurationDirectory(String dir) {
-        Path pDir = Paths.get(dir).normalize();
+        Path pDir = Path.of(dir).normalize();
         File dirFile = pDir.toFile();
         if ( ! dirFile.exists() ) {
             log.warn("Not found: directory for assembler files for services: '"+dir+"'");
