@@ -22,7 +22,6 @@ import java.io.IOException;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
 
@@ -230,7 +229,7 @@ class SpotTDB2 {
     }
 
     private static boolean isEmpty(Location location) {
-        Path path = Paths.get(location.getDirectoryPath());
+        Path path = Path.of(location.getDirectoryPath());
         try(DirectoryStream<Path> entries = Files.newDirectoryStream(path)) {
             return ! entries.iterator().hasNext();
         } catch(IOException ex) {
